<resources>
    <string name="app_name">StyleSync</string>
    <string name="title_home">Home</string>
    <string name="title_wardrobe">Wardrobe</string>
    <string name="title_settings">Settings</string>
    <string name="wardrobe_item_close">Close</string>
    <string name="wardrobe_item_details">Details</string>
    <string name="wardrobe_delete_item">Delete</string>
    <string name="empty_wardrobe_text">Your wardrobe is empty!</string>
    <string name="notification_toggle">Toggle Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="default_web_client_id" translatable="false">webClientId.apps.googleusercontent.com</string>

    <string-array name="color_options">
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Purple</item>
        <item>Pink</item>
        <item>Black</item>
        <item>White</item>
        <item>Gray</item>
    </string-array>
    <string-array name="activities_options">
        <item>Soccer</item>
        <item>Bike</item>
        <item>Study</item>
        <item>Sleep</item>
        <item>Walk</item>
        <item>Run</item>
        <item>Dance</item>
        <item>Football</item>
    </string-array>
    <string-array name="celebrity_options">
        <item>Harry Styles</item>
        <item>Zendaya</item>
        <item>Kareena Kapoor</item>
        <item>Mark Zuckerberg</item>
        <item>Emma Watson</item>
        <item>Adam Sandler</item>
        <item>Gina Rodriguez</item>
        <item>Sandra Oh</item>
        <item>None</item>
    </string-array>

    <string name="google_sign_in">Sign in with Google</string>
    <string name="home_default">Please Generate a Plan</string>
    <string name="enter_clothing_item_hint">Enter clothing item</string>
    <string name="add_clothing_item_button_text">Add</string>
</resources>