<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="dev.stylesync.stylesync.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="dev.stylesync.stylesync.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_wardrobe"
        android:name="dev.stylesync.stylesync.ui.wardrobe.WardrobeFragment"
        android:label="@string/title_wardrobe"
        tools:layout="@layout/fragment_wardrobe" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="dev.stylesync.stylesync.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <action
        android:id="@+id/action_settings_to_home"
        app:destination="@id/navigation_home" />
</navigation>