<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.wardrobe.WardrobeFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wardrobe_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/empty_wardrobe_view_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/empty_wardrobe_view_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_wardrobe_text"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/wardrobe_recycler_view"
        app:layout_constraintBottom_toTopOf="@id/add_clothes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/add_clothes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_clothing_item_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_clothes_button"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/add_clothes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_clothing_item_button_text"
        app:layout_constraintBottom_toBottomOf="@id/add_clothes"
        app:layout_constraintTop_toTopOf="@id/add_clothes"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
